--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
-  "main": "dist/cli.cjs",
-  "module": "dist/cli.js",
-  "bin": "dist/cli.js",
+  "main": "dist/icons.cjs",
+  "module": "dist/icons.js",
+  "bin": "dist/icons.js",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -23,6 +23,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "esbuild-plugin-svgr": "^2.1.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
