--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,9 +20,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": [
+      "vite-plugin-svgr/client"
+    ]
   },
   "include": [
-    "src"
+    "src",
+    "svgr.d.ts"
   ]
 }
