--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,13 +20,9 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "types": [
-      "vite-plugin-svgr/client"
-    ]
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src",
-    "svgr.d.ts"
   ]
 }
