--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,18 +11,18 @@
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": true,
+    // "noEmit": true,
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": [
-      "vite-plugin-svgr/client"
-    ]
+    "outDir": "./dist",
+    "declaration": true, // Enable declaration file generation
+    "declarationMap": true, // Optional: generates .d.ts.map files
+    "emitDeclarationOnly": true, // Only emit declaration files
   },
   "include": [
     "vite.config.ts",
-    "svgr.d.ts"
   ]
 }
