--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "private": false,
   "version": "0.0.1",
   "type": "module",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
+  "types": "dist/lib/index.d.ts",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
