--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -17,12 +17,19 @@
     "noEmit": true,
     "jsx": "react-jsx",
     /* Linting */
+    "outDir": "./dist",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": [
+      "vite-plugin-svgr/client"
+    ]
   },
   "include": [
     "src",
+    "svg.d.ts",
+    "src/svg.d.ts",
+    "src/vite-env.d.ts"
   ]
 }
