--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -27,10 +27,6 @@
     ]
   },
   "include": [
-    "src",
-    "svg.d.ts",
-    "src/svg.d.ts",
-    "src/vite-env.d.ts",
-    "src/index.tsx"
+    "src/**/*",
   ]
 }
