--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "ivan-icons",
   "private": false,
-  "version": "0.4.0",
+  "version": "0.4.1",
   "type": "module",
   "main": "dist/index.cjs.js",
   "module": "dist/index.es.js",
-  "types": "dist/lib/index.d.ts",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
