--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": false,
   "version": "0.4.1",
   "type": "module",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.es.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
@@ -12,7 +12,8 @@
     "build": "tsc -b",
     "prebuild": "vite build",
     "lint": "eslint .",
-    "compile": "tsup",
+    "compile": "tsc -b",
+    "precompile": "tsup",
     "preview": "vite preview"
   },
   "dependencies": {
