--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,7 +7,7 @@
     "module": "ESNext",
     "skipLibCheck": true,
     /* Bundler mode */
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
     "isolatedModules": true,
     "moduleDetection": "force",
@@ -23,6 +23,7 @@
     "declarationMap": true, // Optional: generates .d.ts.map files
     "emitDeclarationOnly": true, // Only emit declaration files
     "jsx": "react-jsx",
+    "allowJs": true,
     "esModuleInterop": true,
     "types": [
       "vite-plugin-svgr/client"
