--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": false,
   "version": "2.1.0",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
